<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#aa000000"
    >

    <LinearLayout
        android:id="@+id/lytprimero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/txtayudalista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/pulsalistado"
            android:textSize="30dp"
            android:textColor="#FFFFFF" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:src="@drawable/flecha" />




    </LinearLayout>


    <LinearLayout
        android:id="@+id/lytsegundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytprimero"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/flecha" />

        <TextView
            android:id="@+id/txtayudahora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pulsahora"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lytsegundo"
        android:layout_marginTop="10dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/manos" />

        <TextView
            android:id="@+id/txtayudazoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zoom"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="40dp"
            android:textSize="20dp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:id="@+id/buttonayuda"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingBottom="15dp"
        android:paddingTop="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="57dp"
        android:background="@color/cyan" />


</RelativeLayout>

