<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2011 
   
   DIFED

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lytlistado"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/card">
    <LinearLayout
        android:id="@+id/datos_desplegable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#B3D9FF"
        android:gravity="center">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textColor="#004A95"
            android:textSize="12dp"
            android:textStyle="bold"
            android:id="@+id/canal_nombre"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/canal_cabeceras"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#DEDFDE"
         android:baselineAligned="false" >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satelite" 
                     style="@style/cabecera" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/posicion" 
                     style="@style/cabecera" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/frecuencia" 
                     style="@style/cabecera" />

         </LinearLayout>
         <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/symbol_rate"
                     style="@style/cabecera"  />

          </LinearLayout>
          <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/encriptacion"
                     style="@style/cabecera"/>

          </LinearLayout>
          
    </LinearLayout>

    <LinearLayout
        android:id="@+id/canal_layout_frecuencias"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@drawable/linea_frec" /><!-- LINEAS -->
</LinearLayout>